adding value changes

--- a/app/views/adding-value-2024/current/eligibility/adding-value/items-needed.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/items-needed.html
@@ -15,7 +15,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        Storage facilities will only be funded as part of a bigger project and cannot be more than 50% of total grant funding.
+                        Storage facilities will only be funded as part of a bigger project and cannot be more than 50% of the total grant funding.
                     </p>
 
                     <p class="govuk-hint">
