--- a/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
@@ -32,7 +32,7 @@
                             checked: true if data['storage'] == 'Yes'
                         },
                         {
-                            text: 'No, we don’t need it',
+                            text: 'No, we do not need storage facilities',
                             value: 'No',
                             checked: true if data['storage'] == 'No'
                         }
