--- a/app/views/adding-value-2024/current/eligibility/common/planning-permission.html
+++ b/app/views/adding-value-2024/current/eligibility/common/planning-permission.html
@@ -40,7 +40,7 @@
                                 }
                         },
                         {
-                            text: 'Should be in place by 31 January 2024',
+                            text: 'Should be in place by the time I make my full application',
                             value: 'Should be',
                             checked: true if data['planning-permission'] == 'Should be',
                             attributes: {
@@ -48,7 +48,7 @@
                                 }
                         },
                         {
-                            text: 'Will not be in place by 31 January 2024',
+                            text: 'Will not be in place by the time I make my full application',
                             value: 'Will not be',
                             checked: true if data['planning-permission'] == 'Will not be',
                             attributes: {
@@ -77,7 +77,7 @@
                     You must have secured planning permission before you submit a full application.
                 </p>
                 <p>
-                    Any planning permission must be in place by 31 January 2024.
+                    Any planning permission must be in place by 31 May 2025.
                 </p>
             </div>
 
