adding value updates

--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir.html
@@ -20,7 +20,7 @@
 
                     <ul class="govuk-list govuk-list--bullet govuk-hint">
                         <li>
-                            red meat abattoir that processes up to 10,000 farmed livestock units each year
+                            red meat abattoir that processes up to 10,000 livestock units each year
                         </li>
                         <li>
                             poultry abattoir that slaughters up to 500,000 birds each year
