--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -46,6 +46,14 @@
                             }
                         },
                         {
+                            text: 'Woodland management processing venison products',
+                            value: 'venison',
+                            checked: true if data['business-type'] == 'venison',
+                            attributes: {
+                                'data-next': 'legal-status'
+                            }
+                        },  
+                        {
                             divider: 'or'
                         },
                         {
@@ -83,6 +91,9 @@
                     </li>
                     <li>
                         are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
+                    </li>
+                    <li>
+                        produce venison products as part of woodland management
                     </li>
                 </ul>
 
