--- a/app/views/adding-value-2024/current/scoring/produce.html
+++ b/app/views/adding-value-2024/current/scoring/produce.html
@@ -39,19 +39,27 @@
                             }
                         },
                         {
-                            text: 'Horticultural produce',
-                            value: 'Horticultural produce',
-                            checked: true if data['scoring-produce'] == 'Horticultural produce',
-                            hint: {
-                                text: 'For example, grading and packing of soft fruit, washing and packing vegetables, packing salad crops'
-                            }
-                        },
-                        {
                             text: 'Dairy or meat produce',
                             value: 'Dairy or meat produce',
                             checked: true if data['scoring-produce'] == 'Dairy or meat produce',
                             hint: {
-                                text: 'For example, processing and bottling milk or slaughtering, cutting. processing and packing meat'
+                                text: 'For example, processing and bottling milk or slaughtering, cutting, processing and packing meat'
+                            }
+                        },
+                        {
+                            text: 'Venison meat produce',
+                            value: 'Venison meat produce',
+                            checked: true if data['scoring-produce'] == 'Venison meat produce',
+                            hint: {
+                                text: 'For example, slaughtering, cutting processing and packing venison meat'
+                            }
+                        },
+                        {
+                            text: 'Fibre produce',
+                            value: 'Fibre produce',
+                            checked: true if data['scoring-produce'] == 'Fibre produce',
+                            hint: {
+                                text: 'For example, processing animal hides and leather, processing fibres such as flax and hemp'
                             }
                         },
                         {
@@ -63,19 +71,19 @@
                             }
                         },
                         {
+                            text: 'Horticultural produce',
+                            value: 'Horticultural produce',
+                            checked: true if data['scoring-produce'] == 'Horticultural produce',
+                            hint: {
+                                text: 'For example, grading and packing of soft fruit, washing and packing vegetables, packing salad crops'
+                            }
+                        },
+                        {
                             text: 'Non-edible produce',
                             value: 'Non-edible produce',
                             checked: true if data['scoring-produce'] == 'Non-edible produce',
                             hint: {
                                 text: 'For example, processing and packing ornamental flowers and bulbs after harvesting'
-                            }
-                        },
-                        {
-                            text: 'Fibre produce',
-                            value: 'Fibre produce',
-                            checked: true if data['scoring-produce'] == 'Fibre produce',
-                            hint: {
-                                text: 'For example, processing animal hides and leather. processing fibres such as flax and hemp'
                             }
                         }
                     ]
@@ -97,14 +105,8 @@
                 </h2>
                 
                 <p>
-                    RPA wants to fund projects that:
+                    RPA wants to fund projects that create and expand processing capacity to provide more English-grown food and products for consumers to buy.
                 </p>
-
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                        create and expand processing capacity to provide more English-grown food for consumers to buy
-                    </li>
-                </ul>
 
             </div>
 
