--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -21,10 +21,10 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          check if you can apply for a grant for your project (takes about 5 minutes)
+          if you are eligible to apply for a grant for your project (takes about 5 minutes)
         </li>
         <li>
-          check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)
+          how well your project scores against the funding priorities (takes about 15 minutes if you have all the project details)
         </li>
       </ul>
 
@@ -44,15 +44,32 @@
           are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers
         </li>
         <li>
-            will do the grant-funded work in England
+          produce venison products as part of woodland management        
         </li>
         <li>
-            estimate the project costs are over £40,000
+          will do the grant-funded work in England
         </li>
       </ul>
 
+      <p>
+        You may be able to apply for up to:
+      </p>
+
+       <ul class="govuk-list govuk-list--bullet">
+        <li>
+          50% of the estimated cost of project items
+        </li>
+        <li>
+          25% of the estimated cost of buying and installing a solar PV system 
+        </li>
+      </ul>
+
+      <p>
+        The maximum grant you can apply for is £500,000 (50% of £1 million). The minimum grant is £20,000 (50% of £40,000).
+      </p>
+
       {{ govukInsetText ({
-        text: 'If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.'
+        text: 'If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA).'
       }) }}
 
       {{ govukButton({
