manual labour results page fix

--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -187,7 +187,7 @@
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
                                 Replaces manual labour
                             </p>
-                            {{ data['manual-labour-amount'] | checkboxAnswersToList | safe }}
+                            {{ data['scoring-manual-labour-amount'] | checkboxAnswersToList | safe }}
                         </th>
                         <td class="govuk-table__cell">
                             Average
